--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Emily's Christmas Present</title>
 </head>
 <body>
-	<img src="img\tag.jpg" alt="tag_display">
+	<img src="img/tag.jpg" alt="tag_display">
 </body>
 </html>
