--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	<title>Emily's Christmas Present</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
 </head>
 <body>
-	<img src="img/tag.jpg" alt="tag_display">
+	<p class="top"><img id="image" src="http://3.bp.blogspot.com/-hE7MPwQ4CtA/Tna6r7CbYMI/AAAAAAAAAY0/MqoqqeZ4FxQ/s1600/Christmas%2BCandles.gif"></p>
+	<p class="center">TO: Emily<a class="centerside">FROM: William</a></p>
+	<p class="bottom"><input class="button" type="button" value="Click Here to Get Your Present!" onclick="redirect()"></p>
+	<script type="text/javascript">
+		function redirect() {
+					window.open('https://store.hypixel.net/', '_self');
+				}
+	</script>
 </body>
 </html>
